# tabl-ez

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  pyproject.toml
bench/: CMakeLists.txt  sparse_table.cpp
src/tables/: column.h  id.h
src/tables/sparse/: blob.h  index.h  table.h
src/tablez/: column.h  id.h  util.h
src/tablez/dense/: column.h  index.h  table.h  thin_vector.h
src/tablez/sparse/: blob.h  index.h  table.h
ut/: CMakeLists.txt  dense_index.cpp  dense_table.cpp  sparse_blob.cpp  sparse_table.cpp
